src/metadslx.compiler/src/generated/java/metadslx/compiler/MetaGeneratorParser.java
// Generated from MetaGeneratorParser.g4 by ANTLR 4.5.1
package metadslx.compiler;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class MetaGeneratorParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		KNamespace=1, KGenerator=2, KUsing=3, KConfiguration=4, KProperties=5, 
		KTemplate=6, KFunction=7, KReturn=8, KSwitch=9, KCase=10, KType=11, KVoid=12, 
		KEnd=13, KFor=14, KForEach=15, KIn=16, KIf=17, KElse=18, KLoop=19, KHasLoop=20, 
		KWhere=21, KOrderBy=22, KDescending=23, KNull=24, KTrue=25, KFalse=26, 
		KBool=27, KByte=28, KChar=29, KDecimal=30, KDouble=31, KFloat=32, KInt=33, 
		KLong=34, KObject=35, KSByte=36, KShort=37, KString=38, KUInt=39, KULong=40, 
		KUShort=41, KThis=42, KNew=43, KIs=44, KAs=45, KTypeof=46, KDefault=47, 
		TSemicolon=48, TColon=49, TDot=50, TComma=51, TAssign=52, TAssignPlus=53, 
		TAssignMinus=54, TAssignAsterisk=55, TAssignSlash=56, TAssignPercent=57, 
		TAssignAmp=58, TAssignPipe=59, TAssignHat=60, TAssignLeftShift=61, TAssignRightShift=62, 
		TOpenParenthesis=63, TCloseParenthesis=64, TOpenBracket=65, TCloseBracket=66, 
		TOpenBrace=67, TCloseBrace=68, TEquals=69, TNotEquals=70, TArrow=71, TSingleArrow=72, 
		TLessThan=73, TGreaterThan=74, TLessThanOrEquals=75, TGreaterThanOrEquals=76, 
		TQuestion=77, TPlus=78, TMinus=79, TExclamation=80, TTilde=81, TAsterisk=82, 
		TSlash=83, TPercent=84, TPlusPlus=85, TMinusMinus=86, TColonColon=87, 
		TAmp=88, THat=89, TPipe=90, TAnd=91, TXor=92, TOr=93, TQuestionQuestion=94, 
		IdentifierNormal=95, IntegerLiteral=96, DecimalLiteral=97, ScientificLiteral=98, 
		DateTimeOffsetLiteral=99, DateTimeLiteral=100, DateLiteral=101, TimeLiteral=102, 
		CharLiteral=103, RegularStringLiteral=104, GuidLiteral=105, UTF8BOM=106, 
		WHITESPACE=107, CRLF=108, LINEBREAK=109, LINE_COMMENT=110, COMMENT=111, 
		DoubleQuoteVerbatimStringLiteral=112, TH_CRLF=113, TH_LINEBREAK=114, TH_TOpenParenthesis=115, 
		TH_TCloseParenthesis=116, KEndTemplate=117, TemplateLineControl=118, TemplateOutput=119, 
		TemplateCrLf=120, TemplateLineBreak=121, TemplateStatementStart=122, TemplateStatementEnd=123, 
		TS_TOpenBracket=124, TS_TCloseBracket=125, DoubleQuoteVerbatimStringLiteralStart=126;
	public static final int
		RULE_main = 0, RULE_namespaceDeclaration = 1, RULE_generatorDeclaration = 2, 
		RULE_usingDeclaration = 3, RULE_configDeclaration = 4, RULE_configProperty = 5, 
		RULE_methodDeclaration = 6, RULE_functionDeclaration = 7, RULE_functionSignature = 8, 
		RULE_paramList = 9, RULE_parameter = 10, RULE_body = 11, RULE_statement = 12, 
		RULE_variableDeclarationStatement = 13, RULE_returnStatement = 14, RULE_expressionStatement = 15, 
		RULE_ifStatement = 16, RULE_ifStatementBegin = 17, RULE_elseIfStatement = 18, 
		RULE_ifStatementElse = 19, RULE_ifStatementEnd = 20, RULE_loopStatement = 21, 
		RULE_loopStatementBegin = 22, RULE_loopStatementEnd = 23, RULE_loopChain = 24, 
		RULE_loopChainItem = 25, RULE_loopChainExpression = 26, RULE_loopWhereExpression = 27, 
		RULE_loopRunExpression = 28, RULE_loopRunList = 29, RULE_loopRun = 30, 
		RULE_switchStatement = 31, RULE_switchStatementBegin = 32, RULE_switchStatementEnd = 33, 
		RULE_switchBranchStatement = 34, RULE_switchBranchHeadStatement = 35, 
		RULE_switchCaseOrTypeIsHeadStatement = 36, RULE_switchCaseHeadStatement = 37, 
		RULE_switchTypeIsHeadStatement = 38, RULE_switchTypeAsHeadStatement = 39, 
		RULE_switchDefaultStatement = 40, RULE_switchDefaultHeadStatement = 41, 
		RULE_templateDeclaration = 42, RULE_templateSignature = 43, RULE_templateBody = 44, 
		RULE_templateContentLine = 45, RULE_templateOutput = 46, RULE_templateLineEnd = 47, 
		RULE_templateStatementStartEnd = 48, RULE_templateStatement = 49, RULE_typeArgumentList = 50, 
		RULE_predefinedType = 51, RULE_typeReferenceList = 52, RULE_typeReference = 53, 
		RULE_arrayType = 54, RULE_nullableType = 55, RULE_genericType = 56, RULE_simpleType = 57, 
		RULE_voidType = 58, RULE_returnType = 59, RULE_expressionList = 60, RULE_variableReference = 61, 
		RULE_rankSpecifiers = 62, RULE_rankSpecifier = 63, RULE_unboundTypeName = 64, 
		RULE_genericDimensionSpecifier = 65, RULE_anonymousFunctionSignature = 66, 
		RULE_explicitParameter = 67, RULE_implicitParameter = 68, RULE_expression = 69, 
		RULE_qualifiedName = 70, RULE_identifierList = 71, RULE_identifier = 72, 
		RULE_literal = 73, RULE_nullLiteral = 74, RULE_booleanLiteral = 75, RULE_numberLiteral = 76, 
		RULE_integerLiteral = 77, RULE_decimalLiteral = 78, RULE_scientificLiteral = 79, 
		RULE_dateOrTimeLiteral = 80, RULE_dateTimeOffsetLiteral = 81, RULE_dateTimeLiteral = 82, 
		RULE_dateLiteral = 83, RULE_timeLiteral = 84, RULE_charLiteral = 85, RULE_stringLiteral = 86, 
		RULE_guidLiteral = 87;
	public static final String[] ruleNames = {
		"main", "namespaceDeclaration", "generatorDeclaration", "usingDeclaration", 
		"configDeclaration", "configProperty", "methodDeclaration", "functionDeclaration", 
		"functionSignature", "paramList", "parameter", "body", "statement", "variableDeclarationStatement", 
		"returnStatement", "expressionStatement", "ifStatement", "ifStatementBegin", 
		"elseIfStatement", "ifStatementElse", "ifStatementEnd", "loopStatement", 
		"loopStatementBegin", "loopStatementEnd", "loopChain", "loopChainItem", 
		"loopChainExpression", "loopWhereExpression", "loopRunExpression", "loopRunList", 
		"loopRun", "switchStatement", "switchStatementBegin", "switchStatementEnd", 
		"switchBranchStatement", "switchBranchHeadStatement", "switchCaseOrTypeIsHeadStatement", 
		"switchCaseHeadStatement", "switchTypeIsHeadStatement", "switchTypeAsHeadStatement", 
		"switchDefaultStatement", "switchDefaultHeadStatement", "templateDeclaration", 
		"templateSignature", "templateBody", "templateContentLine", "templateOutput", 
		"templateLineEnd", "templateStatementStartEnd", "templateStatement", "typeArgumentList", 
		"predefinedType", "typeReferenceList", "typeReference", "arrayType", "nullableType", 
		"genericType", "simpleType", "voidType", "returnType", "expressionList", 
		"variableReference", "rankSpecifiers", "rankSpecifier", "unboundTypeName", 
		"genericDimensionSpecifier", "anonymousFunctionSignature", "explicitParameter", 
		"implicitParameter", "expression", "qualifiedName", "identifierList", 
		"identifier", "literal", "nullLiteral", "booleanLiteral", "numberLiteral", 
		"integerLiteral", "decimalLiteral", "scientificLiteral", "dateOrTimeLiteral", 
		"dateTimeOffsetLiteral", "dateTimeLiteral", "dateLiteral", "timeLiteral", 
		"charLiteral", "stringLiteral", "guidLiteral"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'namespace'", "'generator'", "'using'", "'configuration'", "'properties'", 
		"'template'", "'function'", "'return'", "'switch'", "'case'", "'type'", 
		"'void'", "'end'", "'for'", "'foreach'", "'in'", "'if'", "'else'", "'loop'", 
		"'hasloop'", "'where'", "'orderby'", "'descending'", "'null'", "'true'", 
		"'false'", null, "'byte'", "'char'", "'decimal'", "'double'", "'float'", 
		"'int'", "'long'", "'object'", "'sbyte'", "'short'", "'string'", "'uint'", 
		"'ulong'", "'ushort'", "'this'", "'new'", "'is'", "'as'", "'typeof'", 
		"'default'", "';'", "':'", "'.'", "','", "'='", "'+='", "'-='", "'*='", 
		"'/='", "'%='", "'&='", "'|='", "'^='", "'<<='", "'>>='", "'('", "')'", 
		null, "']'", "'{'", "'}'", "'=='", "'!='", "'=>'", "'->'", "'<'", "'>'", 
		"'<='", "'>='", "'?'", "'+'", "'-'", "'!'", "'~'", null, "'/'", "'%'", 
		"'++'", "'--'", "'::'", "'&'", "'^'", "'|'", "'&&'", "'^^'", "'||'", "'??'", 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, "'\"'", null, null, null, null, null, null, 
		null, null, null, null, null, null, null, "'@\"'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "KNamespace", "KGenerator", "KUsing", "KConfiguration", "KProperties", 
		"KTemplate", "KFunction", "KReturn", "KSwitch", "KCase", "KType", "KVoid", 
		"KEnd", "KFor", "KForEach", "KIn", "KIf", "KElse", "KLoop", "KHasLoop", 
		"KWhere", "KOrderBy", "KDescending", "KNull", "KTrue", "KFalse", "KBool", 
		"KByte", "KChar", "KDecimal", "KDouble", "KFloat", "KInt", "KLong", "KObject", 
		"KSByte", "KShort", "KString", "KUInt", "KULong", "KUShort", "KThis", 
		"KNew", "KIs", "KAs", "KTypeof", "KDefault", "TSemicolon", "TColon", "TDot", 
		"TComma", "TAssign", "TAssignPlus", "TAssignMinus", "TAssignAsterisk", 
		"TAssignSlash", "TAssignPercent", "TAssignAmp", "TAssignPipe", "TAssignHat", 
		"TAssignLeftShift", "TAssignRightShift", "TOpenParenthesis", "TCloseParenthesis", 
		"TOpenBracket", "TCloseBracket", "TOpenBrace", "TCloseBrace", "TEquals", 
		"TNotEquals", "TArrow", "TSingleArrow", "TLessThan", "TGreaterThan", "TLessThanOrEquals", 
		"TGreaterThanOrEquals", "TQuestion", "TPlus", "TMinus", "TExclamation", 
		"TTilde", "TAsterisk", "TSlash", "TPercent", "TPlusPlus", "TMinusMinus", 
		"TColonColon", "TAmp", "THat", "TPipe", "TAnd", "TXor", "TOr", "TQuestionQuestion", 
		"IdentifierNormal", "IntegerLiteral", "DecimalLiteral", "ScientificLiteral", 
		"DateTimeOffsetLiteral", "DateTimeLiteral", "DateLiteral", "TimeLiteral", 
		"CharLiteral", "RegularStringLiteral", "GuidLiteral", "UTF8BOM", "WHITESPACE", 
		"CRLF", "LINEBREAK", "LINE_COMMENT", "COMMENT", "DoubleQuoteVerbatimStringLiteral", 
		"TH_CRLF", "TH_LINEBREAK", "TH_TOpenParenthesis", "TH_TCloseParenthesis", 
		"KEndTemplate", "TemplateLineControl", "TemplateOutput", "TemplateCrLf", 
		"TemplateLineBreak", "TemplateStatementStart", "TemplateStatementEnd", 
		"TS_TOpenBracket", "TS_TCloseBracket", "DoubleQuoteVerbatimStringLiteralStart"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "MetaGeneratorParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public MetaGeneratorParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class MainContext extends ParserRuleContext {
		public NamespaceDeclarationContext namespaceDeclaration() {
			return getRuleContext(NamespaceDeclarationContext.class,0);
		}
		public GeneratorDeclarationContext generatorDeclaration() {
			return getRuleContext(GeneratorDeclarationContext.class,0);
		}
		public List<UsingDeclarationContext> usingDeclaration() {
			return getRuleContexts(UsingDeclarationContext.class);
		}
		public UsingDeclarationContext usingDeclaration(int i) {
			return getRuleContext(UsingDeclarationContext.class,i);
		}
		public ConfigDeclarationContext configDeclaration() {
			return getRuleContext(ConfigDeclarationContext.class,0);
		}
		public List<MethodDeclarationContext> methodDeclaration() {
			return getRuleContexts(MethodDeclarationContext.class);
		}
		public MethodDeclarationContext methodDeclaration(int i) {
			return getRuleContext(MethodDeclarationContext.class,i);
		}
		public MainContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_main; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MetaGeneratorParserListener ) ((MetaGeneratorParserListener)listener).enterMain(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MetaGeneratorParserListener ) ((MetaGeneratorParserListener)listener).exitMain(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MetaGeneratorParserVisitor ) return ((MetaGeneratorParserVisitor<? extends T>)visitor).visitMain(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MainContext main() throws RecognitionException {
		MainContext _localctx = new MainContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_main);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(176);
			namespaceDeclaration();
			setState(177);
			generatorDeclaration();
			setState(181);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==KUsing) {
				{
				{
				setState(178);
				usingDeclaration();
				}
				}
				setState(183);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(185);
			_la = _input.LA(1);
			if (_la==KProperties) {
				{
				setState(184);
				configDeclaration();
				}
			}

			setState(190);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==KTemplate || _la==KFunction) {
				{
				{
				setState(187);
				methodDeclaration();
				}
				}
				setState(192);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NamespaceDeclarationContext extends ParserRuleContext {
		public TerminalNode KNamespace() { return getToken(MetaGeneratorParser.KNamespace, 0); }
		public QualifiedNameContext qualifiedName() {
			return getRuleContext(QualifiedNameContext.class,0);
		}
		public TerminalNode TSemicolon() { return getToken(MetaGeneratorParser.TSemicolon, 0); }
		public NamespaceDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_namespaceDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MetaGeneratorParserListener ) ((MetaGeneratorParserListener)listener).enterNamespaceDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MetaGeneratorParserListener ) ((MetaGeneratorParserListener)listener).exitNamespaceDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MetaGeneratorParserVisitor ) return ((MetaGeneratorParserVisitor<? extends T>)visitor).visitNamespaceDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NamespaceDeclarationContext namespaceDeclaration() throws RecognitionException {
		NamespaceDeclarationContext _localctx = new NamespaceDeclarationContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_namespaceDeclaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(193);
			match(KNamespace);
			setState(194);
			qualifiedName();
			setState(195);
			match(TSemicolon);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class GeneratorDeclarationContext extends ParserRuleContext {
		public TerminalNode KGenerator() { return getToken(MetaGeneratorParser.KGenerator, 0); }
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public TerminalNode TSemicolon() { return getToken(MetaGeneratorParser.TSemicolon, 0); }
		public TerminalNode KFor() { return getToken(MetaGeneratorParser.KFor, 0); }
		public TypeReferenceContext typeReference() {
			return getRuleContext(TypeReferenceContext.class,0);
		}
		public GeneratorDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_generatorDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MetaGeneratorParserListener ) ((MetaGeneratorParserListener)listener).enterGeneratorDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MetaGeneratorParserListener ) ((MetaGeneratorParserListener)listener).exitGeneratorDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MetaGeneratorParserVisitor ) return ((MetaGeneratorParserVisitor<? extends T>)visitor).visitGeneratorDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final GeneratorDeclarationContext generatorDeclaration() throws RecognitionException {
		GeneratorDeclarationContext _localctx = new GeneratorDeclarationContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_generatorDeclaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(197);
			match(KGenerator);
			setState(198);
			identifier();
			{
			setState(199);
			match(KFor);
			setState(200);
			typeReference();
			}
			setState(202);
			match(TSemicolon);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class UsingDeclarationContext extends ParserRuleContext {
		public UsingDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_usingDeclaration; }
	 
		public UsingDeclarationContext() { }
		public void copyFrom(UsingDeclarationContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class UsingNamespaceDeclarationContext extends UsingDeclarationContext {
		public TerminalNode KUsing() { return getToken(MetaGeneratorParser.KUsing, 0); }
		public QualifiedNameContext qualifiedName() {
			return getRuleContext(QualifiedNameContext.class,0);
		}
		public TerminalNode TSemicolon() { return getToken(MetaGeneratorParser.TSemicolon, 0); }
		public UsingNamespaceDeclarationContext(UsingDeclarationContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MetaGeneratorParserListener ) ((MetaGeneratorParserListener)listener).enterUsingNamespaceDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MetaGeneratorParserListener ) ((MetaGeneratorParserListener)listener).exitUsingNamespaceDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MetaGeneratorParserVisitor ) return ((MetaGeneratorParserVisitor<? extends T>)visitor).visitUsingNamespaceDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class UsingGeneratorDeclarationContext extends UsingDeclarationContext {
		public TerminalNode KUsing() { return getToken(MetaGeneratorParser.KUsing, 0); }
		public TerminalNode KGenerator() { return getToken(MetaGeneratorParser.KGenerator, 0); }
		public QualifiedNameContext qualifiedName() {
			return getRuleContext(QualifiedNameContext.class,0);
		}
		public TerminalNode TSemicolon() { return getToken(MetaGeneratorParser.TSemicolon, 0); }
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public UsingGeneratorDeclarationContext(UsingDeclarationContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MetaGeneratorParserListener ) ((MetaGeneratorParserListener)listener).enterUsingGeneratorDeclaration(this);
		}
		@Override
